--- a/tensorflowjs/package.json
+++ b/tensorflowjs/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow-models/posenet": "0.0.1",
     "@tensorflow/tfjs": "^0.11.2"
   },
   "devDependencies": {
