--- a/my-profile/package.json
+++ b/my-profile/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
+    "wired-elements": "^0.5.8",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
