--- a/ml-tutorial/tensorflowjs/package.json
+++ b/ml-tutorial/tensorflowjs/package.json
@@ -11,13 +11,21 @@
   "license": "ISC",
   "dependencies": {
     "@tensorflow-models/posenet": "0.0.1",
-    "@tensorflow/tfjs": "^0.11.2"
+    "@tensorflow/tfjs": "^0.11.2",
+    "vue": "^2.5.16",
+    "vue-class-component": "^6.2.0",
+    "vue-property-decorator": "^6.1.0",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "ts-loader": "^4.3.0",
     "typescript": "^2.8.3",
+    "vue-loader": "^15.2.4",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4"
