--- a/ml-tutorial/tensorflowjs/src/tsconfig.json
+++ b/ml-tutorial/tensorflowjs/src/tsconfig.json
@@ -8,6 +8,7 @@
     "strict": false,
     "module": "commonjs",
     "moduleResolution": "node",
-    "outDir": "../dist"
+    "outDir": "../dist",
+    "experimentalDecorators": true
   }
 }
