--- a/ml-tutorial/tensorflowjs/package.json
+++ b/ml-tutorial/tensorflowjs/package.json
@@ -4,18 +4,26 @@
   "description": "",
   "main": "test.js",
   "scripts": {
-    "start": "webpack-dev-server --open",
-    "build": "webpack"
+    "watch-c": "webpack --config webpack/webpack.client.js -w",
+    "watch-s": "webpack --config webpack/webpack.server.js -w",
+    "build-c": "webpack --config webpack/webpack.client.js",
+    "build-s": "webpack --config webpack/webpack.server.js",
+    "build": "npm run build-c && npm run build-s",
+    "start": "npm run build && node server/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@tensorflow-models/posenet": "0.0.1",
     "@tensorflow/tfjs": "^0.11.2",
+    "express": "^4.16.3",
     "vue": "^2.5.16",
     "vue-class-component": "^6.2.0",
     "vue-property-decorator": "^6.1.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-server-renderer": "^2.5.16",
+    "webpack-merge": "^4.1.3",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.5.1",
