--- a/cv-portfolio/package.json
+++ b/cv-portfolio/package.json
@@ -2,8 +2,13 @@
   "name": "cv-portfolio",
   "version": "0.1.0",
   "private": true,
+  "engines" : { "node" : ">=14.17" },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.7",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "cra-template": "1.1.2",
+    "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
