--- a/cv-portfolio/package.json
+++ b/cv-portfolio/package.json
@@ -6,7 +6,6 @@
     "node": ">=14.17"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
@@ -14,6 +13,7 @@
     "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^2.1.0"
   },
