--- a/cv-portfolio/package.json
+++ b/cv-portfolio/package.json
@@ -10,10 +10,11 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "cra-template": "1.1.2",
-    "framer-motion": "^4",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-intersection-observer": "^8.32.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^2.1.0"
   },
