--- a/cv-portfolio/package.json
+++ b/cv-portfolio/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@react-three/fiber": "^7.0.26",
     "cra-template": "1.1.2",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
@@ -22,6 +23,8 @@
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.32.1",
     "react-scripts": "4.0.3",
+    "three": "^0.138.3",
+    "three.meshline": "^1.4.0",
     "web-vitals": "^2.1.0"
   },
   "eslintConfig": {
